created swagger docs

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+# Leaving my env was intentional for easy sampling
+# than you for your time
+
+
 NODE_ENV=development
 PORT=8080
 
@@ -11,6 +15,3 @@ SMPT_SERVICE=gmail
 SMPT_MAIL=akogwu.emmanuel7010@gmail.com
 SMPT_PASSWORD=tibd zymf lxlh cwbg
 
-
-ACCESS_TOKEN_SECRET="9t&N8/?\nyzN!p~XSREfqS)!z`XyD,>$d-\g0I*bXA7t;}/fw/"
-REFRESH_TOKEN_SECRET="\6Wp%nM-0J9kop7>{F-5naO38£@aBA{1dm$AVg.Sbq<jM5U:7"
