--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.0",
     "mongoose": "^8.16.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.13.0",
     "zod": "^3.25.67"
   },
@@ -29,6 +31,8 @@
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.10",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/winston": "^2.4.4",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.20.3",
