created swagger docs

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Leaving my env was intentional for easy sampling
-# than you for your time
+# thank you for your time
 
 
 NODE_ENV=development
@@ -7,11 +7,4 @@ PORT=8080
 
 
 MONGODB_URI=mongodb+srv://akogwu:akogwu@cluster0.hf7af9v.mongodb.net/1971Tech?retryWrites=true&w=majority
-
-
-SMPT_HOST=smtp.gmail.com
-SMPT_PORT=465
-SMPT_SERVICE=gmail
-SMPT_MAIL=akogwu.emmanuel7010@gmail.com
-SMPT_PASSWORD=tibd zymf lxlh cwbg
 
