--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc && tsc-alias",
-    "start": "node ./dist",
+    "start": "node --env-file .env -- ./dist",
     "dev": "tsx watch --env-file .env -- index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
