--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc && tsc-alias",
-    "start": "node --env-file .env -- ./dist",
+    "start": "node -r dotenv/config ./dist/index.js",
     "dev": "tsx watch --env-file .env -- index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.1",
     "swagger-jsdoc": "^6.2.8",
